--- a/src/main/resources/assets/basedefense/lang/en_us.json
+++ b/src/main/resources/assets/basedefense/lang/en_us.json
@@ -9,5 +9,6 @@
 	"container.basedefense.keysmith": "Keysmithing",
 	"container.basedefense.locksmith": "Locksmithing",
 	"tooltip.basedefense.unlockids": "Unlock IDs:",
-	"tooltip.basedefense.keyid": "Key ID: %s"
+	"tooltip.basedefense.keyid": "Key ID: %s",
+	"itemGroup.basedefense": "Base Defense"
 }
