--- a/src/main/resources/assets/basedefense/lang/en_us.json
+++ b/src/main/resources/assets/basedefense/lang/en_us.json
@@ -13,5 +13,6 @@
 	"tooltip.basedefense.unlockids": "Unlock IDs:",
 	"tooltip.basedefense.keyid": "Key ID: %s",
 	"tooltip.basedefense.skeleton_key": "for Server Operators!",
+	"tooltip.basedefense.keycolor": "Color #%s: %s",
 	"itemGroup.basedefense": "Base Defense"
 }
