Add padlocked doors for all vanilla door

--- a/src/main/resources/assets/basedefense/lang/en_us.json
+++ b/src/main/resources/assets/basedefense/lang/en_us.json
@@ -7,7 +7,13 @@
 	"block.basedefense.test_lock_block": "Lock Test Block",
 	"block.basedefense.keysmith_table": "Keysmithing Table",
 	"block.basedefense.locksmith_table": "Locksmithing Table",
-	"block.basedefense.lockable_door": "Lockable Iron Door",
+	"block.basedefense.padlocked_iron_door": "Padlocked Iron Door",
+	"block.basedefense.padlocked_oak_door": "Padlocked Oak Door",
+	"block.basedefense.padlocked_birch_door": "Padlocked Birch Door",
+	"block.basedefense.padlocked_spruce_door": "Padlocked Spruce Door",
+	"block.basedefense.padlocked_jungle_door": "Padlocked Jungle Door",
+	"block.basedefense.padlocked_acacia_door": "Padlocked Acacia Door",
+	"block.basedefense.padlocked_dark_oak_door": "Padlocked Dark Oak Door",
 	"container.basedefense.keysmith": "Keysmithing",
 	"container.basedefense.locksmith": "Locksmithing",
 	"tooltip.basedefense.unlockids": "Unlock IDs:",
