--- a/src/main/resources/assets/basedefense/lang/en_us.json
+++ b/src/main/resources/assets/basedefense/lang/en_us.json
@@ -15,6 +15,13 @@
 	"block.basedefense.padlocked_jungle_door": "Padlocked Jungle Door",
 	"block.basedefense.padlocked_acacia_door": "Padlocked Acacia Door",
 	"block.basedefense.padlocked_dark_oak_door": "Padlocked Dark Oak Door",
+	"block.basedefense.locked_iron_door": "Locked Iron Door",
+	"block.basedefense.locked_oak_door": "Locked Oak Door",
+	"block.basedefense.locked_birch_door": "Locked Birch Door",
+	"block.basedefense.locked_spruce_door": "Locked Spruce Door",
+	"block.basedefense.locked_jungle_door": "Locked Jungle Door",
+	"block.basedefense.locked_acacia_door": "Locked Acacia Door",
+	"block.basedefense.locked_dark_oak_door": "Locked Dark Oak Door",
 	"container.basedefense.keysmith": "Keysmithing",
 	"container.basedefense.locksmith": "Locksmithing",
 	"tooltip.basedefense.unlockids": "Unlock IDs:",
