Add keyring item

--- a/src/main/resources/assets/basedefense/lang/en_us.json
+++ b/src/main/resources/assets/basedefense/lang/en_us.json
@@ -4,6 +4,7 @@
 	"item.basedefense.padlock": "Padlock",
 	"item.basedefense.broken_padlock": "Broken Padlock",
 	"item.basedefense.lock_core": "Lock Core",
+	"item.basedefense.keyring": "Keyring",
 	"item.basedefense.skeleton_key": "Skeleton Key",
 	"block.basedefense.test_lock_block": "Lock Test Block",
 	"block.basedefense.keysmith_table": "Keysmithing Table",
@@ -28,6 +29,7 @@
 	"tooltip.basedefense.keyid": "Key ID: %s",
 	"tooltip.basedefense.skeleton_key": "for Server Operators!",
 	"tooltip.basedefense.keycolor": "Color #%s: %s",
+	"tooltip.basedefense.keyring.count": "Contains %s key(s)",
 	"status.basedefense.padlocked_door.locked": "This %s is locked.",
 	"status.basedefense.padlocked_door.info": "\"%s\"",
 	"itemGroup.basedefense": "Base Defense",
