--- a/src/main/resources/assets/basedefense/lang/en_us.json
+++ b/src/main/resources/assets/basedefense/lang/en_us.json
@@ -28,7 +28,7 @@
 	"tooltip.basedefense.unlockids": "Unlock IDs:",
 	"tooltip.basedefense.keyid": "Key ID: %s",
 	"tooltip.basedefense.skeleton_key": "for Server Operators!",
-	"tooltip.basedefense.keycolor": "Color #%s: %s",
+	"tooltip.basedefense.color": "Color #%s: %s",
 	"tooltip.basedefense.keyring.count": "Contains %s key(s)",
 	"status.basedefense.padlocked_door.locked": "This %s is locked.",
 	"status.basedefense.padlocked_door.info": "\"%s\"",
