Add new capabilities for code-containing and -holding
 * Added IContainsCode for things that may hold a code, but don't expose it (good for things that may not have an exposable list of codes)
 * Added ICodesHolder for things that expose a list of codes
 * Fixed item capability syncing by using item share tags
 * Moved color and code information tooltip gen to Util

--- a/src/main/resources/assets/basedefense/lang/en_us.json
+++ b/src/main/resources/assets/basedefense/lang/en_us.json
@@ -1,39 +1,38 @@
 {
-	"item.basedefense.key": "Key",
-	"item.basedefense.blank_key": "Blank Key",
-	"item.basedefense.padlock": "Padlock",
-	"item.basedefense.broken_padlock": "Broken Padlock",
-	"item.basedefense.lock_core": "Lock Core",
-	"item.basedefense.keyring": "Keyring",
-	"item.basedefense.skeleton_key": "Skeleton Key",
-	"block.basedefense.test_lock_block": "Lock Test Block",
-	"block.basedefense.keysmith_table": "Keysmithing Table",
-	"block.basedefense.locksmith_table": "Locksmithing Table",
-	"block.basedefense.padlocked_iron_door": "Padlocked Iron Door",
-	"block.basedefense.padlocked_oak_door": "Padlocked Oak Door",
-	"block.basedefense.padlocked_birch_door": "Padlocked Birch Door",
-	"block.basedefense.padlocked_spruce_door": "Padlocked Spruce Door",
-	"block.basedefense.padlocked_jungle_door": "Padlocked Jungle Door",
-	"block.basedefense.padlocked_acacia_door": "Padlocked Acacia Door",
-	"block.basedefense.padlocked_dark_oak_door": "Padlocked Dark Oak Door",
-	"block.basedefense.locked_iron_door": "Locked Iron Door",
-	"block.basedefense.locked_oak_door": "Locked Oak Door",
-	"block.basedefense.locked_birch_door": "Locked Birch Door",
-	"block.basedefense.locked_spruce_door": "Locked Spruce Door",
-	"block.basedefense.locked_jungle_door": "Locked Jungle Door",
-	"block.basedefense.locked_acacia_door": "Locked Acacia Door",
-	"block.basedefense.locked_dark_oak_door": "Locked Dark Oak Door",
-	"container.basedefense.keysmith": "Keysmithing",
-	"container.basedefense.locksmith": "Locksmithing",
-	"tooltip.basedefense.unlockids": "Unlock IDs:",
-	"tooltip.basedefense.keyid": "Key ID: %s",
-	"tooltip.basedefense.skeleton_key": "for Server Operators!",
-	"tooltip.basedefense.color": "Color #%s: %s",
-	"tooltip.basedefense.keyring.count": "Contains %s key(s)",
-	"status.basedefense.padlocked_door.locked": "This %s is locked.",
-	"status.basedefense.padlocked_door.info": "\"%s\"",
-	"itemGroup.basedefense": "Base Defense",
-	"subtitle.basedefense.locked_door.attempt": "Door locked",
-	"subtitle.basedefense.locked_door.relock": "Door relocks",
-	"subtitle.basedefense.locked_door.unlock": "Door unlocks"
+    "item.basedefense.key": "Key",
+    "item.basedefense.blank_key": "Blank Key",
+    "item.basedefense.padlock": "Padlock",
+    "item.basedefense.broken_padlock": "Broken Padlock",
+    "item.basedefense.lock_core": "Lock Core",
+    "item.basedefense.keyring": "Keyring",
+    "item.basedefense.skeleton_key": "Skeleton Key",
+    "block.basedefense.test_lock_block": "Lock Test Block",
+    "block.basedefense.keysmith_table": "Keysmithing Table",
+    "block.basedefense.locksmith_table": "Locksmithing Table",
+    "block.basedefense.padlocked_iron_door": "Padlocked Iron Door",
+    "block.basedefense.padlocked_oak_door": "Padlocked Oak Door",
+    "block.basedefense.padlocked_birch_door": "Padlocked Birch Door",
+    "block.basedefense.padlocked_spruce_door": "Padlocked Spruce Door",
+    "block.basedefense.padlocked_jungle_door": "Padlocked Jungle Door",
+    "block.basedefense.padlocked_acacia_door": "Padlocked Acacia Door",
+    "block.basedefense.padlocked_dark_oak_door": "Padlocked Dark Oak Door",
+    "block.basedefense.locked_iron_door": "Locked Iron Door",
+    "block.basedefense.locked_oak_door": "Locked Oak Door",
+    "block.basedefense.locked_birch_door": "Locked Birch Door",
+    "block.basedefense.locked_spruce_door": "Locked Spruce Door",
+    "block.basedefense.locked_jungle_door": "Locked Jungle Door",
+    "block.basedefense.locked_acacia_door": "Locked Acacia Door",
+    "block.basedefense.locked_dark_oak_door": "Locked Dark Oak Door",
+    "container.basedefense.keysmith": "Keysmithing",
+    "container.basedefense.locksmith": "Locksmithing",
+    "tooltip.basedefense.storedcodes": "Stored Code(s):",
+    "tooltip.basedefense.skeleton_key": "for Server Operators!",
+    "tooltip.basedefense.color": "Color #%s: %s",
+    "tooltip.basedefense.keyring.count": "Contains %s key(s)",
+    "status.basedefense.padlocked_door.locked": "This %s is locked.",
+    "status.basedefense.padlocked_door.info": "\"%s\"",
+    "itemGroup.basedefense": "Base Defense",
+    "subtitle.basedefense.locked_door.attempt": "Door locked",
+    "subtitle.basedefense.locked_door.relock": "Door relocks",
+    "subtitle.basedefense.locked_door.unlock": "Door unlocks"
 }
